<resources>
    <string name="app_name">Calculadora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cero">0</string>
    <string name="doble_cero">00</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="suma">\u002B</string>
    <string name="resta">\u2212</string>
    <string name="multiplicacion">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="igual">\u003D</string>
    <string name="punto_decimal">.</string>
    <string name="mas_menos">\u00B1</string>
    <string name="porcentaje">\u0025</string>
    <string name="all_clear">AC</string>
    <string name="cuadrado_area">Área de un cuadrado</string>
    <string name="circulo_area">Área de un circulo</string>
    <string name="paralelogramo_area">Área de un paralelogramo</string>
    <string name="rectangulo_area">Área de un rectangulo</string>
    <string name="triangulo_area">Área de un triangulo</string>
    <string name="trapecio_area">Área de un trapecio</string>
    <string name="rombo_area">Área de un rombo</string>

    <string name="cubo_volumen">Volúmen de un cubo</string>
    <string name="prisma_rectangular_volumen">Volúmen de un prisma rectangular</string>
    <string name="cilindro_volumen">Volúmen de un cilindro</string>
    <string name="esfera_volumen">Volúmen de un esfera</string>
    <string name="cono_volumen">Volúmen de un cono</string>
    <string name="piramide_volumen">Volúmen de un pirámide</string>

        <!-- Agrega más descripciones según sea necesario -->



</resources>