<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:id="@+id/viewDisplayBackgruond"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/display_Backgruond"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </View>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toBottomOf="@+id/viewDisplayBackgruond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </View>
    
    <TextView
        android:id="@+id/textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:text="@string/cero"
        android:textColor="@color/primary_Text"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <TextView
        android:id="@+id/textEcuation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:textColor="@color/secondary_Text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/textInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageNightMode"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>

    <TableLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/buttons_Background"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp">

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/botonAllClear"
                style="@style/AllClearButton"
                android:text="@string/all_clear"/>

            <Button
                android:id="@+id/botonC"
                style="@style/ActionButton"
                android:text="C"/>

            <Button
                android:id="@+id/botonPorcentaje"
                style="@style/ActionButton"
                android:text="@string/porcentaje"/>

            <Button
                android:id="@+id/botonDivision"
                style="@style/ActionButton"
                android:text="/"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/botonSiete"
                style="@style/CalculatorButton"
                android:text="@string/siete"/>

            <Button
                android:id="@+id/botonOcho"
                style="@style/CalculatorButton"
                android:text="@string/ocho"/>

            <Button
                android:id="@+id/botonNueve"
                style="@style/CalculatorButton"
                android:text="@string/nueve"/>

            <Button
                android:id="@+id/botonMultiplicacion"
                style="@style/ActionButton"
                android:text="*"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/botonCuatro"
                style="@style/CalculatorButton"
                android:text="@string/cuatro"/>

            <Button
                android:id="@+id/botonCinco"
                style="@style/CalculatorButton"
                android:text="@string/cinco"/>

            <Button
                android:id="@+id/botonSeis"
                style="@style/CalculatorButton"
                android:text="@string/seis"/>

            <Button
                android:id="@+id/botonResta"
                style="@style/ActionButton"
                android:text="-"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/botonUno"
                style="@style/CalculatorButton"
                android:text="@string/uno"/>

            <Button
                android:id="@+id/botonDos"
                style="@style/CalculatorButton"
                android:text="@string/dos"/>

            <Button
                android:id="@+id/botonTres"
                style="@style/CalculatorButton"
                android:text="@string/tres"/>

            <Button
                android:id="@+id/botonSuma"
                style="@style/ActionButton"
                android:text="@string/suma"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/botonDobleCero"
                style="@style/CalculatorButton"
                android:text="@string/doble_cero"/>

            <Button
                android:id="@+id/botonCero"
                style="@style/CalculatorButton"
                android:text="@string/cero"/>

            <Button
                android:id="@+id/botonPuntoDecimal"
                style="@style/CalculatorButton"
                android:text="@string/punto_decimal"/>

            <Button
                android:id="@+id/botonIgual"
                style="@style/ActionButton"
                android:text="@string/igual"/>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>