<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SecondFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="Fórmulas Áreas">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Área Cuadrado">

        </TextView>

        <ImageView
            android:id="@+id/cuadrado"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/area_cuadrado"
            android:contentDescription="@string/cuadrado_area"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Área Círculo">

        </TextView>
        <ImageView
            android:id="@+id/circulo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/area_circulo"
            android:contentDescription="@string/circulo_area"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Área Triángulo">

        </TextView>
        <ImageView
            android:id="@+id/triangulo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/area_triangulo"
            android:contentDescription="@string/triangulo_area"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Área Trapecio">

        </TextView>
        <ImageView
            android:id="@+id/trapecio"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/area_trapecio"
            android:contentDescription="@string/trapecio_area"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Área Rombo">

        </TextView>
        <ImageView
            android:id="@+id/rombo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/area_rombo"
            android:contentDescription="@string/rombo_area"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Área Rectángulo">

        </TextView>
        <ImageView
            android:id="@+id/rectangulo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/area_rectangulo"
            android:contentDescription="@string/rectangulo_area"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>


    </LinearLayout>
</ScrollView>
