<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="Fórmulas Volúmenes">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Volúmen Cubo">

        </TextView>

        <ImageView
            android:id="@+id/cubo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/volumen_cubo"
            android:contentDescription="@string/cubo_volumen"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Volúmen Esfera">

        </TextView>
        <ImageView
            android:id="@+id/circulo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/volumen_esfera"
            android:contentDescription="@string/esfera_volumen"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Prisma Rectangular (paralelepípedo)">

        </TextView>
        <ImageView
            android:id="@+id/piramide_rectangular"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/volumen_piramide_rectangular"
            android:contentDescription="@string/prisma_rectangular_volumen"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Volúmen Cilindro">

        </TextView>
        <ImageView
            android:id="@+id/cilindro"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/volumen_cilindro"
            android:contentDescription="@string/cilindro_volumen"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Volúmen Cono">

        </TextView>
        <ImageView
            android:id="@+id/cono"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/volumen_cono"
            android:contentDescription="@string/cono_volumen"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="Volúmen Pirámide">

        </TextView>
        <ImageView
            android:id="@+id/piramide"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/volumen_piramide"
            android:contentDescription="@string/piramide_volumen"
            android:layout_marginBottom="90dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"/>


    </LinearLayout>



</ScrollView>